style fixes and CORS / noAuthHttpClient changes

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicons/favicon-120.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicons/favicon-72.png">
   <link rel="apple-touch-icon-precomposed" href="/assets/favicons/favicon-57.png">
-  
+  <link href="https://fonts.googleapis.com/css?family=Arvo|Fjalla+One" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
-	
